--- a/diapos/SFCR_ConceptosGenerales.tex
+++ b/diapos/SFCR_ConceptosGenerales.tex
@@ -1,62 +1,76 @@
-% Created 2018-04-09 lun 18:27
+% Created 2022-12-12 lun 19:44
 % Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{graphicx}
-\usepackage{grffile}
 \usepackage{longtable}
 \usepackage{wrapfig}
 \usepackage{rotating}
 \usepackage[normalem]{ulem}
 \usepackage{amsmath}
-\usepackage{textcomp}
 \usepackage{amssymb}
 \usepackage{capt-of}
 \usepackage{hyperref}
 \usepackage{color}
 \usepackage{listings}
+\usepackage[spanish]{babel}
+\setbeamercolor{alerted text}{fg=blue!50!black}
+\setbeamerfont{alerted text}{series=\bfseries}
+\setbeamerfont{block title}{series=\bfseries}
+\setbeamercolor{block title}{bg=structure.fg!20!bg!50!bg}
+\setbeamercolor{block body}{use=block title,bg=block title.bg}
+\setbeamertemplate{navigation symbols}{\insertsectionnavigationsymbol}
+\lstset{keywordstyle=\color{blue}, commentstyle=\color{gray!90}, basicstyle=\ttfamily\small, columns=fullflexible, breaklines=true,linewidth=\textwidth, backgroundcolor=\color{gray!23}, basewidth={0.5em,0.4em}, literate={¡}{{\textexclamdown}}1 {á}{{\'a}}1 {ñ}{{\~n}}1 {é}{{\'e}}1 {ó}{{\'o}}1 {í}{{\'i}}1 {ú}{{\'u}}1 {º}{{\textordmasculine}}1, showstringspaces=false}
 \usepackage{mathpazo}
+\AtBeginSubsection[]{\begin{frame}[plain]\tableofcontents[currentsubsection,sectionstyle=show/shaded,subsectionstyle=show/shaded/hide]\end{frame}}
+\AtBeginSection[]{\begin{frame}[plain]\tableofcontents[currentsection,hideallsubsections]\end{frame}}
+\usepackage{siunitx}
+\sisetup{output-decimal-marker={,}}
+\DeclareSIUnit{\watthour}{Wh}
+\DeclareSIUnit{\wattpeak}{Wp}
+\DeclareSIUnit{\watthour}{Wh}
+\DeclareSIUnit{\amperehour}{Ah}
+\usepackage{steinmetz}
+\hypersetup{colorlinks=true, linkcolor=Blue, urlcolor=Blue}
+\usepackage{fancyvrb}
+\DefineVerbatimEnvironment{verbatim}{Verbatim}{fontsize=\tiny, formatcom = {\color{black!70}}}
 \usepackage{gensymb}
 \usepackage{amsmath}
 \usepackage{chemarr}%flechas para reacciones químicas (SFER.tex)
-\bibliographystyle{plain}
-\AtBeginSubsection[]{\begin{frame}[plain]\tableofcontents[currentsubsection,sectionstyle=show/shaded,subsectionstyle=show/shaded/hide]\end{frame}}
-\AtBeginSection[]{\begin{frame}[plain]\tableofcontents[currentsection,hideallsubsections]\end{frame}}
-\usepackage[emulate=units]{siunitx}
-\sisetup{fraction=nice, decimalsymbol=comma, retain-unity-mantissa = false}
-\newunit{\wattpeak}{Wp}
-\newunit{\watthour}{Wh}
-\newunit{\amperehour}{Ah}
-\hypersetup{colorlinks=true, linkcolor=Blue, urlcolor=Blue}
 \renewcommand{\thefootnote}{\fnsymbol{footnote}}
 \beamertemplatenavigationsymbolsempty
 \setbeamertemplate{footline}[frame number]
-\setbeamercolor{alerted text}{fg=blue!50!black} \setbeamerfont{alerted text}{series=\bfseries}
-\usetheme[hideothersubsections]{Goettingen}
+\bibliographystyle{plain}
+\usetheme{Boadilla}
 \usecolortheme{rose}
 \usefonttheme{serif}
-\author{Oscar Perpiñán Lamigueiro \\ \url{http://oscarperpinan.github.io}}
+\author{\href{https://oscarperpinan.github.io}{Oscar Perpiñán Lamigueiro}}
 \date{}
 \title{SFCR: Conceptos Generales}
+\institute[UPM]{Universidad Politécnica de Madrid}
+\setbeamertemplate{itemize items}[triangle]
+\setbeamertemplate{enumerate items}[circle]
+\setbeamertemplate{section in toc}[circle]
+\setbeamertemplate{subsection in toc}[circle]
 \hypersetup{
- pdfauthor={Oscar Perpiñán Lamigueiro \\ \url{http://oscarperpinan.github.io}},
+ pdfauthor={\href{https://oscarperpinan.github.io}{Oscar Perpiñán Lamigueiro}},
  pdftitle={SFCR: Conceptos Generales},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 25.2.2 (Org mode 9.1.9)}, 
+ pdfcreator={Emacs 27.1 (Org mode 9.5.5)}, 
  pdflang={Spanish}}
 \begin{document}
 
 \maketitle
 
 \section{Sistemas Fotovoltaicos de Conexión a Red}
-\label{sec:orgfb9050f}
+\label{sec:orgce2a6f5}
 
 \subsection{Definición}
-\label{sec:org6ce806d}
+\label{sec:org4c7107c}
 
-\begin{frame}[label={sec:org144e737}]{Definición de un SFCR}
+\begin{frame}[label={sec:org0e76ab2}]{Definición de un SFCR}
 \begin{block}{}
 Un Sistema Fotovoltaico Conectado a la Red (SFCR) es un sistema cuya
 función es producir energía eléctrica en condiciones adecuadas para
@@ -69,8 +83,8 @@ poder ser inyectada en la red convencional.
 \end{frame}
 
 \subsection{Mecanismos de Retribución}
-\label{sec:orgac98b44}
-\begin{frame}[label={sec:orgacf90fa}]{Mecanismos de retribución}
+\label{sec:org160ed0f}
+\begin{frame}[label={sec:org4b90c62}]{Mecanismos de retribución}
 \begin{itemize}
 \item La energía producida por este sistema será consumida parcial o totalmente en las cercanías, y la energía sobrante será inyectada en la red para su distribución a otros puntos de consumo.
 
@@ -84,7 +98,7 @@ poder ser inyectada en la red convencional.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orge2c9fc7}]{Retribución con prima}
+\begin{frame}[label={sec:org572a9ea}]{Retribución con prima}
 \begin{itemize}
 \item \alert{Ingresos} por la \alert{energía total producida} (independientemente de la que
 haya sido consumida en las cercanías del SFCR).
@@ -96,7 +110,7 @@ tomar en consideración los consumos cercanos.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org35681ed}]{Balance neto}
+\begin{frame}[label={sec:org990061d}]{Balance neto}
 \begin{itemize}
 \item \alert{Compensa los saldos de energía eléctrica} entre el SFCR y un sistema de consumo asociado.
 
@@ -110,8 +124,8 @@ tomar en consideración los consumos cercanos.
 
 
 \subsection{SFCR en suelo y en edificación}
-\label{sec:org9764daf}
-\begin{frame}[label={sec:orgc64209a}]{Características distintivas sobre suelo y en edificación}
+\label{sec:orgfc9f6fa}
+\begin{frame}[label={sec:orgae65a76}]{Características distintivas sobre suelo y en edificación}
 \begin{itemize}
 \item \alert{Sobre suelo}
 
@@ -138,7 +152,7 @@ o son elementos constituyentes de la composición arquitectónica
 \end{frame}
 
 
-\begin{frame}[label={sec:orgafb6edb}]{SFCR sobre suelo}
+\begin{frame}[label={sec:org1bdc7cb}]{SFCR sobre suelo}
 \begin{itemize}
 \item \alert{Objetivo}: maximizar la producción energética anual del sistema con
 el menor coste y la menor ocupación de terreno posibles
@@ -160,13 +174,13 @@ empleado).
 \end{frame}
 
 
-\begin{frame}[label={sec:org3c8a5a1}]{Estructuras sobre suelo}
+\begin{frame}[label={sec:org00f52e3}]{Estructuras sobre suelo}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/EstructuraEstaticaSuelo.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orga7166db}]{SFCR sobre suelo: seguimiento}
+\begin{frame}[label={sec:orgaacab53}]{SFCR sobre suelo: seguimiento}
 \begin{itemize}
 \item \alert{Fundamento:}
 
@@ -182,7 +196,7 @@ mejores aprovechamientos del terreno.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org78a8b12}]{SFCR sobre suelo: seguimiento}
+\begin{frame}[label={sec:orgb8704a4}]{SFCR sobre suelo: seguimiento}
 \begin{itemize}
 \item \alert{Doble eje}
 
@@ -214,20 +228,20 @@ necesarios),
 \end{frame}
 
 
-\begin{frame}[label={sec:orgb2d9b7f}]{Seguidor de eje horizontal N-S}
+\begin{frame}[label={sec:org0d65a84}]{Seguidor de eje horizontal N-S}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SeguidorEjeHorizontal.jpg}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org883c5cf}]{Seguidor de doble eje}
+\begin{frame}[label={sec:orgf5bcf98}]{Seguidor de doble eje}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SeguidorReocin.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org28d2153}]{SFCR en edificación}
+\begin{frame}[label={sec:org7dd45db}]{SFCR en edificación}
 \begin{itemize}
 \item La integración del sistema fotovoltaico con el edificio exige tener en cuenta muchos factores que condicionan la ubicación y la configuración del generador.
 
@@ -235,7 +249,7 @@ necesarios),
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org6d0e996}]{Integración arquitectónica}
+\begin{frame}[label={sec:org2b85bbe}]{Integración arquitectónica}
 \begin{itemize}
 \item Cubierta Inclinada
 \item Cubierta Plana
@@ -251,44 +265,44 @@ necesarios),
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org26febb7}]{Cubierta Inclinada}
+\begin{frame}[label={sec:org2e67e62}]{Cubierta Inclinada}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/CubiertaInclinada.png}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org582bf95}]{Cubierta Plana}
+\begin{frame}[label={sec:orga5c90d2}]{Cubierta Plana}
 \begin{center}
 \includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/CubiertaPlana.png}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orga4c1d15}]{Parasol}
+\begin{frame}[label={sec:orgf584a8b}]{Parasol}
 \begin{center}
 \includegraphics[height=0.9\textheight]{/home/oscar/github/esf/figs/Parasol.png}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org63f5ef8}]{Fachada Acristalada}
+\begin{frame}[label={sec:org31e94ff}]{Fachada Acristalada}
 \begin{center}
 \includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/FachadaAcristalada.png}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org331f5a4}]{Muro Cortina}
+\begin{frame}[label={sec:org2932d8d}]{Muro Cortina}
 \begin{center}
 \includegraphics[height=0.9\textheight]{/home/oscar/github/esf/figs/MuroCortina.png}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org94630ec}]{Aparcamiento}
+\begin{frame}[label={sec:org9c1123e}]{Aparcamiento}
 \begin{center}
 \includegraphics[height=0.8\textheight]{/home/oscar/github/esf/figs/Aparcamiento.png}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org0cbcf7e}]{SFCR en edificación: CTE-HE5}
+\begin{frame}[label={sec:org8863d97}]{SFCR en edificación: CTE-HE5}
 \begin{itemize}
 \item El CTE-HTE5 divide España en cinco zonas climáticas de acuerdo al valor medio anual de la radiación global diaria en el plano horizontal.
 
@@ -298,7 +312,7 @@ necesarios),
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org6f9ddba}]{SFCR en edificación: CTE-HE5}
+\begin{frame}[label={sec:orgfb869b8}]{SFCR en edificación: CTE-HE5}
 \begin{itemize}
 \item Potencia \alert{nominal} a instalar
 \end{itemize}
@@ -315,9 +329,9 @@ $$P_{min}=C\cdot(0.002\cdot S - 5)$$
 \end{frame}
 
 \subsection{Condiciones técnicas de la conexión}
-\label{sec:org80c69c2}
+\label{sec:orgce843c9}
 
-\begin{frame}[label={sec:org4bfa46c}]{SFCR en Edificación: sistemas eléctricos}
+\begin{frame}[label={sec:org2eba03d}]{SFCR en Edificación: sistemas eléctricos}
 \begin{itemize}
 \item En este tipo de SFCR el diseño de los sistemas eléctricos debe tener en cuenta las canalizaciones previstas o existentes en el edificio.
 
@@ -327,64 +341,34 @@ $$P_{min}=C\cdot(0.002\cdot S - 5)$$
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgd0387da}]{Separación entre comercialización y generación}
+\begin{frame}[label={sec:org2f7daf2}]{Separación entre comercialización y generación}
 \begin{itemize}
 \item La reglamentación eléctrica española establece la separación administrativa entre la comercialización y la distribución de la energía (así, la empresa que nos vende energía eléctrica en nuestro hogar es distinta a la que compra la energía que produce el sistema que podamos tener en nuestro tejado).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgb5cb45d}]{Generación distribuida}
+\begin{frame}[label={sec:org98d76f5}]{Autoconsumo}
+Las condiciones técnicas de conexión a la red eléctrica de los
+sistemas de autoconsumo en España se detallan:
+
 \begin{itemize}
-\item Por tanto, al menos administrativamente, la generación fotovoltaica y el consumo cercano son dos elementos independientes.
-
-\item No obstante, es claro que la corriente eléctrica no entiende de leyes ni contratos, sino que fluye según las leyes de Kirchhoff.
-
-\item Así, la energía producida por un SFCR será consumida parcial o totalmente en el propio edificio (generación distribuida).
+\item Guía Técnica de Aplicación del REBT: Instalaciones Generadoras de Baja Tensión (ITC-BT-40).
+\item Anexo III (Modos de Conexión) de la Guía Profesional del Autoconsumo del IDAE.
 \end{itemize}
-\end{frame}
 
-\begin{frame}[label={sec:org5290b25}]{El problema de la medida}
+En estos documentos se recopila el catálogo de posibilidades según:
 \begin{itemize}
-\item La separación existente entre empresa comercializadora y empresa distribuidora se refleja en la separación de contratos y facturas, y por tanto, también de elementos y puntos de medida.
-
-\item Es decir, no pueden utilizarse las lecturas de dos contadores distintos (uno de venta y otro de compra) para componer una única factura.
-
-\item El sistema fotovoltaico debe conectarse en un punto propiedad de la compañía eléctrica (por tanto, externo a las instalaciones eléctricas propias del domicilio, empresa, etc).
-\end{itemize}
-\end{frame}
-
-\begin{frame}[label={sec:org36ae751}]{Ejemplo: suministro en MT}
-\begin{itemize}
-\item \alert{Titulares con contrato de suministro en Media Tensión con instalaciones fotovoltaicas de potencia menor a 100 kW}
-
-\begin{itemize}
-\item A pesar de que la potencia fotovoltaica es menor que el valor que obliga a la conexión en MT, la otra obligación de conexión en punto propiedad de la compañía eléctrica implica el uso de un transformador BT-MT distinto al usado para consumo.
-
-\item Sin embargo, esta solución conlleva pérdidas energéticas e incremento de inversión de la instalación que la pueden hacer inviable.
-
-\item La posibilidad de inyectar aguas abajo del transformador de consumo y hacer los balances necesarios en las facturas de venta y consumo, utilizando las medidas de los respectivos contadores es posible bajo el RD 1699/2011.
-\end{itemize}
-\end{itemize}
-\end{frame}
-
-\begin{frame}[label={sec:org738d4d2}]{Ejemplo: comunidades de vecinos}
-\begin{itemize}
-\item \alert{Titulares en edificios de varias viviendas}
-
-\begin{itemize}
-\item De nuevo, la necesidad de realizar la conexión aguas arriba al contador de consumo, implica en este caso la instalación de cableado bajante desde la vivienda en cuestión hasta la sala de protecciones del edificio.
-
-\item Esta solución no es siempre fácil ni técnicamente (no siempre existe espacio o canalizaciones disponibles en la bajante del edificio) ni administrativamente (es necesario el permiso de la comunidad de vecinos).
-\end{itemize}
+\item tipo de autoconsumo (individual o colectivo)
+\item tipo de conexión (en red interior o a través de red).
 \end{itemize}
 \end{frame}
 
 \section{Inversor de CR}
-\label{sec:org4735b99}
+\label{sec:orgf197068}
 
 \subsection{Conceptos Generales}
-\label{sec:org8147fea}
-\begin{frame}[label={sec:org123852d}]{Acoplamiento a la red}
+\label{sec:org7b406bc}
+\begin{frame}[label={sec:org593de2f}]{Acoplamiento a la red}
 \begin{block}{}
 La potencia suministrada por un generador fotovoltaico iluminado es de
 tensión continua, que debe ser adecuadamente acondicionada para permitir
@@ -394,7 +378,7 @@ conexión a red.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:orgb43ae30}]{Definición}
+\begin{frame}[label={sec:orgc931410}]{Definición}
 \begin{itemize}
 \item El equipo de acondicionamiento de potencia, denominado inversor DC/AC, realiza la \alert{conversión de continua a alterna cumpliendo con  determinados requisitos} de tensión eficaz, frecuencia, distorsión armónica de las ondas de tensión y corriente, rendimiento instantáneo y medio, seguridad eléctrica, etc.
 
@@ -403,8 +387,8 @@ conexión a red.
 \end{frame}
 
 \subsection{Tipos de Inversores}
-\label{sec:org4f146fa}
-\begin{frame}[label={sec:org458a11b}]{Tipos de inversores}
+\label{sec:org6aae338}
+\begin{frame}[label={sec:org60dc697}]{Tipos de inversores}
 A grandes rasgos, los inversores pueden agruparse en tres categorías:
 
 \begin{itemize}
@@ -418,7 +402,7 @@ a una rama del generador.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org6a94194}]{Inversores de Rama}
+\begin{frame}[label={sec:org6ef2bb2}]{Inversores de Rama}
 \begin{itemize}
 \item Los \alert{inversores orientados a rama} son particularmente útiles en
 algunos sistemas de integración arquitectónica, al poder adaptarse
@@ -430,7 +414,7 @@ pequeños sistemas demostrativos).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org74c940a}]{Inversores Centrales}
+\begin{frame}[label={sec:org8923625}]{Inversores Centrales}
 \begin{itemize}
 \item Los \alert{inversores centrales} son recomendables para instalaciones de
 medio o gran tamaño. Permiten reducir costes (de adquisición,
@@ -443,8 +427,8 @@ de 100 kW o 4 de 250 kW, pero no con 200 de 5 kW).
 \end{frame}
 
 \subsection{Características básicas}
-\label{sec:org96a9ef1}
-\begin{frame}[label={sec:org84f7241}]{Potencia y ventana MPP}
+\label{sec:org462dc13}
+\begin{frame}[label={sec:org5184541}]{Potencia y ventana MPP}
 \begin{itemize}
 \item \alert{Potencia nominal y máxima}, siendo ésta un porcentaje de sobrecarga
 que el equipo es capaz de soportar durante un determinado período de
@@ -456,7 +440,7 @@ algoritmo de búsqueda del MPP del generador fotovoltaico.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org5bfc68e}]{Tensiones}
+\begin{frame}[label={sec:org3d22c33}]{Tensiones}
 \begin{itemize}
 \item \alert{Tensión máxima de entrada}: es la máxima tensión que el inversor
 puede aguantar sin sufrir una avería.
@@ -472,7 +456,7 @@ necesaria para que el inversor comience el proceso de conversión.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org5421473}]{Eficiencia y Rendimiento}
+\begin{frame}[label={sec:org55d8fda}]{Eficiencia y Rendimiento}
 \begin{itemize}
 \item \alert{Eficiencia máxima}: máximo valor que toma la relación entre potencia
 de salida y potencia de entrada. En inversores de calidad la
@@ -486,8 +470,8 @@ características de la zona centroeuropea.
 \end{itemize}
 \end{frame}
 \subsection{Composición}
-\label{sec:orged3c062}
-\begin{frame}[label={sec:org382301e}]{Entrada}
+\label{sec:org6d58a08}
+\begin{frame}[label={sec:orgea0ed79}]{Entrada}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/InversorPV.pdf}
 \end{center}
@@ -502,7 +486,7 @@ realizar las funciones de búsqueda del punto de máxima potencia.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org8871d65}]{Puente y salida}
+\begin{frame}[label={sec:org8327eec}]{Puente y salida}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/InversorPV.pdf}
 \end{center}
@@ -519,7 +503,7 @@ AC.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgc0d220e}]{Control}
+\begin{frame}[label={sec:org376e098}]{Control}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/InversorPV.pdf}
 \end{center}
@@ -534,14 +518,14 @@ salida del inversor.
 \end{frame}
 
 \subsection{Funcionamiento}
-\label{sec:orgd070f36}
-\begin{frame}[label={sec:org714b432}]{Modulación SPWM}
+\label{sec:org0cffa1d}
+\begin{frame}[label={sec:orgf75f2a0}]{Modulación SPWM}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SPWMMonofasico.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org7350519}]{Busqueda del Punto de Máxima Potencia}
+\begin{frame}[label={sec:orgf66a2fc}]{Busqueda del Punto de Máxima Potencia}
 \begin{center}
 \includegraphics[height=0.6\textheight]{../figs/CurvaIV_Ta20_G800.pdf}
 \end{center}
@@ -552,7 +536,7 @@ $$\begin{cases}
       \frac{dP}{dV}<0 & V_{mpp}<V<V_{oc}\end{cases}$$
 \end{frame}
 
-\begin{frame}[label={sec:org723158f}]{Busqueda del Punto de Máxima Potencia}
+\begin{frame}[label={sec:orgf784836}]{Busqueda del Punto de Máxima Potencia}
 \begin{center}
 \includegraphics[height=0.6\textheight]{../figs/CurvaIV_Ta20_G800.pdf}
 \end{center}
@@ -563,7 +547,7 @@ $$\begin{cases}
       \frac{dI}{dV}<-\frac{I}{V} & V_{mpp}<V<V_{oc}\end{cases}$$
 \end{frame}
 
-\begin{frame}[label={sec:org669def3}]{Transformador de salida}
+\begin{frame}[label={sec:org1ea7fb2}]{Transformador de salida}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/InversorPV.pdf}
 \end{center}
@@ -581,7 +565,7 @@ y la salida (AC).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org876b5a0}]{Opciones comerciales}
+\begin{frame}[label={sec:orgf6610cc}]{Opciones comerciales}
 Existen tres opciones en el mercado de inversores de conexión a red:
 
 \begin{itemize}
@@ -593,7 +577,7 @@ Existen tres opciones en el mercado de inversores de conexión a red:
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgfa99796}]{Normativa relativa al transformador}
+\begin{frame}[label={sec:orgbe4e297}]{Normativa relativa al transformador}
 La normativa vigente en España obliga al uso de un transformador de aislamiento o elemento equivalente para cumplir tres objetivos:
 
 \begin{enumerate}
@@ -605,7 +589,7 @@ La normativa vigente en España obliga al uso de un transformador de aislamiento
 \end{enumerate}
 \end{frame}
 
-\begin{frame}[label={sec:org9c52953}]{Normativa: Nota de Interpretación Tecnica}
+\begin{frame}[label={sec:orgaa705f0}]{Normativa: Nota de Interpretación Tecnica}
 \begin{itemize}
 \item Objetivos 1 y 2 se consiguen mediante la adecuada conexión de masas y tierras en el sistema.
 
@@ -614,14 +598,14 @@ La normativa vigente en España obliga al uso de un transformador de aislamiento
 \end{frame}
 
 \subsection{Islanding}
-\label{sec:orge11ffb6}
-\begin{frame}[label={sec:org5836dd2}]{Definición del problema}
+\label{sec:org5e6e035}
+\begin{frame}[label={sec:org52c1310}]{Definición del problema}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Isla.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orge5f9602}]{Ecuaciones básicas}
+\begin{frame}[label={sec:org488a5a7}]{Ecuaciones básicas}
 Antes de la desconexión:$$\Delta P=P_{carga}-P_{PV}$$
 
 $$\Delta Q=Q_{carga}-Q_{PV}\simeq Q_{carga}$$
@@ -633,7 +617,7 @@ $$P_{carga}=\frac{V^{2}}{R_{carga}}$$
 $$Q_{carga}=\frac{V^{2}}{\omega L}-V^{2}\omega C$$
 \end{frame}
 
-\begin{frame}[label={sec:org5b83677}]{Casos posibles}
+\begin{frame}[label={sec:org8a05dea}]{Casos posibles}
 \begin{itemize}
 \item \(\Delta P^{-}>0\rightarrow P_{carga}>P_{PV}\). Al producirse la
 desconexión, dado que \(P_{PV}\) no cambia, disminuye la potencia
@@ -653,7 +637,7 @@ reactiva debe tender a cero, y por tanto disminuye la frecuencia.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org9224e14}]{Ventana de no-detección}
+\begin{frame}[label={sec:org2738492}]{Ventana de no-detección}
 Cuando las condiciones de trabajo del generador y el consumo antes de la
 desconexión son muy cercanas, existe una ventana de no-detección.
 
@@ -664,7 +648,7 @@ desconexión son muy cercanas, existe una ventana de no-detección.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgea0b096}]{Estudio experimental IEA-PVPS}
+\begin{frame}[label={sec:orgae0fd0c}]{Estudio experimental IEA-PVPS}
 \begin{itemize}
 \item La probabilidad de que se de una situación de balance entre consumo y
 generación en una red de Baja Tensión está entre \(\num{1e-5}\) y
@@ -676,7 +660,7 @@ de estos dos sucesos es virtualmente nula.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org5d42e58}]{Estudio experimental IEA-PVPS}
+\begin{frame}[label={sec:orgf75bb81}]{Estudio experimental IEA-PVPS}
 \begin{itemize}
 \item El riesgo eléctrico existente en cualquier red eléctrica es del orden
 de \(\num{1e-6}\).
