--- a/diapos/Tarea_Radiacion.org
+++ b/diapos/Tarea_Radiacion.org
@@ -3,22 +3,22 @@
 #+AUTHOR:    Oscar Perpiñán Lamigueiro
 #+EMAIL:     oscar.perpinan@upm.es
 #+DATE: 
-#+LANGUAGE:  en
+#+LANGUAGE:  es
 #+OPTIONS:   num:t toc:nil \n:nil @:t ::t |:t ^:t -:t f:t *:t <:t
 #+LATEX_HEADER: \usepackage{mathpazo}
 
 En esta actividad vas a estimar las medias mensuales de la radiación global incidente en el plano horizontal y en el plano de un generador.
 
-Para el cálculo de la *radiación en el plano horizontal* seguiremos el siguiente itinerario (en cursiva se indican los apartados opcionales):
+Para el cálculo de la *radiación en el plano horizontal* seguiremos el siguiente itinerario:
 
 1. Obtén series temporales de *medidas diarias* de radiación solar de 3 estaciones meteorológicas (recomendable longitud de 10 años).
 2. Filtra cada serie empleando límites físicos.
 3. Obtén una serie temporal *diaria* representativa de la región calculando la media de las tres series temporales.
 4. Compara esta serie temporal media con las series temporales de cada estación usando métricas estadísticas (MBD, RMSD, MAD).
 5. Elige una localización dentro del perímetro definido por las tres estaciones. Obtén las *12 medias mensuales* en esta localización empleando interpolación espacial (IDW) a partir de las *12 medias mensuales* de la radiación filtrada de cada estación (punto 2)
-6. /Obtén medias temporales de radiación solar de un servicio satelital (preferiblemente CMSAF,  empleando QGis o software similar) para una región que cubra las tres estaciones[fn:1]./
-7. /Compara las medias mensuales de las tres estaciones con las estimaciones satelitales empleando métricas estadísticas./
-8. /Combina la estimación satelital en la localización del punto 5 con las medias mensuales obtenidas en ese punto./
+6. Obtén medias temporales de radiación solar de un servicio satelital (preferiblemente CMSAF,  empleando QGis o software similar) para una región que cubra las tres estaciones[fn:1].
+7. Compara las medias mensuales de las tres estaciones con las estimaciones satelitales empleando métricas estadísticas.
+8. Combina la estimación satelital en la localización del punto 5 con las medias mensuales obtenidas en ese punto.
 
 A continuación, realizaremos el cálculo de la *radiación en el plano del generador*. Este generador está localizado en el hemisferio norte, orientado al sur y con una inclinación de 30º. Seguiremos el siguiente itinerario:
 
