--- a/diapos/config.org
+++ b/diapos/config.org
@@ -3,37 +3,25 @@
 #+DATE:
 #+BEAMER_HEADER:\institute[UPM]{Universidad Politécnica de Madrid}
 #+STARTUP: beamer
-#+DESCRIPTION:
-#+KEYWORDS:
 #+LANGUAGE:  es
 #+OPTIONS:   num:t toc:nil \n:nil @:t ::t |:t ^:t -:t f:t *:t <:t
-#+OPTIONS:   TeX:t LaTeX:t skip:nil d:nil todo:t pri:nil tags:not-in-toc
-#+INFOJS_OPT: view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
-#+EXPORT_SELECT_TAGS: export
-#+EXPORT_EXCLUDE_TAGS: noexport
-#+LINK_UP:   
-#+LINK_HOME: 
-#+XSLT:
 #+LaTeX_CLASS: beamer
-#+LATEX_CLASS_OPTIONS: [xcolor={usenames,svgnames,dvipsnames}]
+#+LATEX_CLASS_OPTIONS: [aspectratio=169, usenames,svgnames,dvipsnames]
 #+BEAMER_THEME: Boadilla
-#+BEAMER_FONT_THEME: serif
 #+BEAMER_COLOR_THEME: rose
-#+LATEX_HEADER: \usepackage[spanish]{babel}
-#+LATEX_HEADER: \setbeamercolor{alerted text}{fg=blue!50!black}
-#+LATEX_HEADER: \setbeamerfont{alerted text}{series=\bfseries}
-#+LATEX_HEADER: \setbeamerfont{block title}{series=\bfseries}
-#+LATEX_HEADER: \setbeamercolor{block title}{bg=structure.fg!20!bg!50!bg}
-#+LATEX_HEADER: \setbeamercolor{block body}{use=block title,bg=block title.bg}
-#+LATEX_HEADER: \setbeamertemplate{navigation symbols}{\insertsectionnavigationsymbol}
-#+BEAMER_HEADER: \setbeamertemplate{itemize items}[triangle]
-#+BEAMER_HEADER: \setbeamertemplate{enumerate items}[circle]
-#+BEAMER_HEADER: \setbeamertemplate{section in toc}[circle]
-#+BEAMER_HEADER: \setbeamertemplate{subsection in toc}[circle]
-#+LATEX_HEADER: \lstset{keywordstyle=\color{blue}, commentstyle=\color{gray!90}, basicstyle=\ttfamily\small, columns=fullflexible, breaklines=true,linewidth=\textwidth, backgroundcolor=\color{gray!23}, basewidth={0.5em,0.4em}, literate={¡}{{\textexclamdown}}1 {á}{{\'a}}1 {ñ}{{\~n}}1 {é}{{\'e}}1 {ó}{{\'o}}1 {í}{{\'i}}1 {ú}{{\'u}}1 {º}{{\textordmasculine}}1, showstringspaces=false}
+#+BEAMER_FONT_THEME: serif
 #+LATEX_HEADER: \usepackage{mathpazo}
-#+LATEX_HEADER: \AtBeginSubsection[]{\begin{frame}[plain]\tableofcontents[currentsubsection,sectionstyle=show/shaded,subsectionstyle=show/shaded/hide]\end{frame}}
-#+LATEX_HEADER: \AtBeginSection[]{\begin{frame}[plain]\tableofcontents[currentsection,hideallsubsections]\end{frame}}
+#+BEAMER_HEADER: \setbeamercolor{alerted text}{fg=blue!50!black} \setbeamerfont{alerted text}{series=\bfseries}
+#+LATEX_HEADER: \usepackage{gensymb}
+#+LATEX_HEADER: \usepackage{amsmath}
+#+LATEX_HEADER: \usepackage{diffcoeff}
+#+LATEX_HEADER: \usepackage{steinmetz}
+#+LATEX_HEADER: \usepackage{mathtools}
+#+LATEX_HEADER: \usepackage{fancyvrb}
+#+LATEX_HEADER: \DefineVerbatimEnvironment{verbatim}{Verbatim}{fontsize=\tiny, formatcom = {\color{black!70}}}
+#+LATEX_HEADER: \bibliographystyle{plain}
+#+BEAMER_HEADER: \AtBeginSubsection[]{\begin{frame}[plain]\tableofcontents[currentsubsection,sectionstyle=show/shaded,subsectionstyle=show/shaded/hide]\end{frame}}
+#+BEAMER_HEADER: \AtBeginSection[]{\begin{frame}[plain]\tableofcontents[currentsection,hideallsubsections]\end{frame}}
 #+LATEX_HEADER: \usepackage{siunitx}
 #+LATEX_HEADER: \sisetup{output-decimal-marker={,}}
 #+LATEX_HEADER: \DeclareSIUnit{\watthour}{Wh}
@@ -42,16 +30,15 @@
 #+LATEX_HEADER: \DeclareSIUnit{\amperehour}{Ah}
 #+LATEX_HEADER: \usepackage{steinmetz}
 #+LATEX_HEADER: \hypersetup{colorlinks=true, linkcolor=Blue, urlcolor=Blue}
-#+LATEX_HEADER: \usepackage{fancyvrb}
-#+LATEX_HEADER: \DefineVerbatimEnvironment{verbatim}{Verbatim}{fontsize=\tiny, formatcom = {\color{black!70}}}
-#+LATEX_HEADER: \usepackage{gensymb}
-#+LATEX_HEADER: \usepackage{amsmath}
-#+LATEX_HEADER: \usepackage{chemarr}%flechas para reacciones químicas (SFER.tex)
 #+LATEX_HEADER: \renewcommand{\thefootnote}{\fnsymbol{footnote}}
-#+LATEX_HEADER: \beamertemplatenavigationsymbolsempty
-#+LATEX_HEADER: \setbeamertemplate{footline}[frame number]
-#+LATEX_HEADER: \bibliographystyle{plain}
-#+PROPERTY: header-args :tangle yes :comments org
+#+BEAMER_HEADER: \beamertemplatenavigationsymbolsempty
+#+BEAMER_HEADER: \setbeamertemplate{footline}[frame number]
+#+BEAMER_HEADER: \setbeamertemplate{itemize items}[triangle]
+#+BEAMER_HEADER: \setbeamertemplate{enumerate items}[circle]
+#+BEAMER_HEADER: \setbeamertemplate{section in toc}[circle]
+#+BEAMER_HEADER: \setbeamertemplate{subsection in toc}[circle]
+#+LATEX_HEADER: \parskip=5pt
+
 
 
 
