--- a/diapos/RadiacionSolar_ControlCalidad.tex
+++ b/diapos/RadiacionSolar_ControlCalidad.tex
@@ -1,4 +1,4 @@
-% Created 2023-01-08 dom 16:59
+% Created 2023-01-08 dom 20:48
 % Intended LaTeX compiler: pdflatex
 \documentclass[aspectratio=169, usenames,svgnames,dvipsnames]{beamer}
 \usepackage[utf8]{inputenc}
@@ -62,10 +62,10 @@
 \maketitle
 
 \section{Estadística}
-\label{sec:org9615179}
+\label{sec:org3967edb}
 
 
-\begin{frame}[label={sec:org1820aa3}]{Variable aleatoria y proceso estocástico}
+\begin{frame}[label={sec:org1a6b348}]{Variable aleatoria y proceso estocástico}
 \begin{itemize}
 \item Una \alert{variable aleatoria} es una función que asigna un único numero
 real a cada resultado de un espacio muestral en un experimento.
@@ -75,10 +75,12 @@ lo largo del \alert{tiempo} (p.ej. la radiación).
 \end{frame}
 
 
-\begin{frame}[label={sec:orgf59fafc}]{Función de densidad de probabilidad}
+\begin{frame}[label={sec:org253ba10}]{Función de densidad de probabilidad}
 La función de densidad de probabilidad, \(f(X)\), de una variable
 aleatoria \alert{asigna probabilidad} a un suceso:
 
+\begin{columns}
+\begin{column}{0.5\columnwidth}
 
 \[
 P(a<X<b)=\int_{a}^{b}f(x)dx
@@ -91,24 +93,18 @@ P(X<b)=\int_{-\infty}^{b}f(x)dx\]
 
 \[
 P(X>a)=\int_{a}^{\infty}f(x)dx\]
-\end{frame}
+\end{column}
 
-
-\begin{frame}[label={sec:org3448d44}]{Función de Densidad de Probabilidad}
+\begin{column}{0.5\columnwidth}
 \begin{center}
-\includegraphics[width=.9\linewidth]{../figs/FuncionDensidadProbabilidad.pdf}
+\includegraphics[height=0.7\textheight]{../figs/FuncionDensidadProbabilidad.pdf}
 \end{center}
-\end{frame}
-
-\begin{frame}[label={sec:orgb075c7e}]{Histograma}
-\begin{center}
-\includegraphics[width=.9\linewidth]{../figs/Histograma.pdf}
-\end{center}
+\end{column}
+\end{columns}
 \end{frame}
 
 
-
-\begin{frame}[label={sec:org9593f34}]{Media, varianza y desviación estándar}
+\begin{frame}[label={sec:org3db997c}]{Media, varianza y desviación estándar}
 \begin{itemize}
 \item La \alert{media} de una variable aleatoria es el \alert{centro de masas} de su función densidad de probabilidad:
 \end{itemize}
@@ -132,7 +128,7 @@ P(X>a)=\int_{a}^{\infty}f(x)dx\]
 
 
 
-\begin{frame}[label={sec:org4a220fe}]{Combinación lineal de variables aleatorias}
+\begin{frame}[label={sec:orgd58f5c4}]{Combinación lineal de variables aleatorias}
 \begin{itemize}
 \item La \alert{media de la suma} de varias variables aleatorias \alert{independientes} es
 la suma de las medias:
@@ -153,33 +149,34 @@ la suma de las medias:
 
 
 
-\begin{frame}[label={sec:orgd4a7f0a}]{Media y varianza de la media muestral}
+\begin{frame}[label={sec:org666317b}]{Media y varianza de la media muestral}
 \begin{itemize}
 \item Una \alert{muestra de una población} es un conjunto de variables
 aleatorias independientes (\(X_{1}...X_{n}\)).
 
-\item Si se toma una muestra de una población cuya media es \(\mu\) y su
-varianza es \(\sigma^{2}\), entonces la media de la muestra es otra
+\item Si se toma una muestra de una población, la media de la muestra es otra
 variable aleatoria (que es una suma de variables aleatorias)
 \end{itemize}
 
 \[
-\overline{X}=\frac{1}{n}\sum_{n}X_{i}
+\overline{X}=\frac{1}{i=n}\sum_{n}X_{i}
 \]
 \end{frame}
 
 
 
-\begin{frame}[label={sec:org5491931}]{Media y varianza de la media muestral}
+\begin{frame}[label={sec:orge152351}]{Media y varianza de la media muestral}
+Sea una población cuya media es \(\mu\) y su varianza es \(\sigma^{2}\):
+
 \begin{itemize}
-\item Por tanto, la \alert{media de la media muestral} es la media de población:
+\item La \alert{media de la media muestral} es la media poblacional:
 \end{itemize}
 \[
-\overline{X}=\frac{1}{n}\sum_{n}X_{i} = \mu
+\mu_{\overline{X}}=\frac{1}{i = n}\sum_{n}\mu_{X_{i}} = \mu
 \]
 
 \begin{itemize}
-\item La \alert{varianza de la media muestral} es la suma de las varianzas:
+\item La \alert{varianza de la media muestral} es la varianza poblacional dividido por el número de muestras.
 \end{itemize}
 
 \[
@@ -194,13 +191,13 @@ Por tanto, una forma de \alert{reducir la incertidumbre} es realizar la
 
 
 
-\begin{frame}[label={sec:org60c7299}]{Mediana y cuartiles}
+\begin{frame}[label={sec:org46cba0f}]{Mediana y cuartiles}
 \begin{itemize}
 \item La \alert{mediana} divide el conjunto de valores de la variable en \alert{dos
 mitades} iguales (divide el area encerrada por la función densidad
 de probabilidad en dos partes iguales).
 \item Los \alert{cuartiles} dividen este area en \alert{cuatro} partes iguales.
-\item El area encerrada entre cada par de cuartiles es igual al 25$\backslash$% del total.
+\item El area encerrada entre cada par de cuartiles es igual al 25\% del total.
 \item La \alert{mediana} es el \alert{segundo cuartil}.
 \item La \alert{distancia intercuartil} (definida entre los cuartiles 1 y 3) es
 una \alert{medida de la dispersión} de la variable.
@@ -209,46 +206,46 @@ una \alert{medida de la dispersión} de la variable.
 
 
 \section{Gráficos}
-\label{sec:orgaecbcce}
+\label{sec:org06fb118}
 
 
-\begin{frame}[label={sec:orga36dcca}]{Función de Densidad de Probabilidad}
+\begin{frame}[label={sec:org2fc00a1}]{Función de Densidad de Probabilidad}
 \begin{center}
-\includegraphics[width=.9\linewidth]{../figs/FuncionDensidadProbabilidad.pdf}
+\includegraphics[height=0.9\textheight]{../figs/FuncionDensidadProbabilidad.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orge16c279}]{Histograma}
+\begin{frame}[label={sec:orgcbdefc1}]{Histograma}
 \begin{center}
-\includegraphics[width=.9\linewidth]{../figs/Histograma.pdf}
-\end{center}
-\end{frame}
-
-
-\begin{frame}[label={sec:org2de4989}]{Gráficos boxplot}
-\begin{center}
-\includegraphics[width=.9\linewidth]{../figs/GraficoBoxplot.pdf}
+\includegraphics[height=0.9\textheight]{../figs/Histograma.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:orge02437b}]{Gráficos de dispersión}
+\begin{frame}[label={sec:org904f9c9}]{Gráficos boxplot}
 \begin{center}
-\includegraphics[width=.9\linewidth]{../figs/GraficoDispersion.pdf}
+\includegraphics[height=0.9\textheight]{../figs/GraficoBoxplot.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org0ec8ed9}]{Matrices de gráficos de dispersión}
+\begin{frame}[label={sec:org5adc334}]{Gráficos de dispersión}
+\begin{center}
+\includegraphics[height=0.9\textheight]{../figs/GraficoDispersion.pdf}
+\end{center}
+\end{frame}
+
+
+\begin{frame}[label={sec:orge144d98}]{Matrices de gráficos de dispersión}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/Splom.png}
 \end{center}
 \end{frame}
 
 \section{Control de Calidad de Medidas}
-\label{sec:orga4a0710}
+\label{sec:orgfca856a}
 
-\begin{frame}[label={sec:org31878d4}]{Introducción}
+\begin{frame}[label={sec:orgccd56ed}]{Introducción}
 \begin{block}{Las medidas recogidas por estaciones meteorológicas se deben filtrar para eliminar datos erroneos.}
 \begin{itemize}
 \item Límites Físicos
@@ -263,20 +260,20 @@ una \alert{medida de la dispersión} de la variable.
 
 
 
-\begin{frame}[label={sec:org2d67bf8}]{Límites físicos}
+\begin{frame}[label={sec:org588b7e6}]{Límites físicos}
 \begin{block}{Irradiación Diaria}
 \begin{itemize}
-\item La radiación global en el plano horizontal debe ser inferior a la extraterrestre (\(K_t \leq 1\))
+\item La radiación global en el plano horizontal debe ser inferior a la extraterrestre (\(K_{td} \leq 1\))
 \end{itemize}
 \[
-G_d(0) \leq B_od(0)
+G_d(0) \leq B_{od}(0)
 \]
 
 \begin{itemize}
 \item El índice de claridad debe ser superior a 0.03
 \end{itemize}
 \[
-K_t = \frac{G_d(0)}{B_{od}(0)} \geq 0.03
+K_{td} = \frac{G_d(0)}{B_{od}(0)} \geq 0.03
 \]
 
 \begin{itemize}
@@ -287,7 +284,7 @@ K_t = \frac{G_d(0)}{B_{od}(0)} \geq 0.03
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org9583982}]{Límites físicos}
+\begin{frame}[label={sec:orga0fc560}]{Límites físicos}
 \begin{block}{Irradiancia (intradiaria)}
 \begin{itemize}
 \item El índice de claridad debe ser inferior a 1 cuando la altura solar es suficiente:
@@ -310,39 +307,32 @@ G \geq 0  \text{ si } \gamma_s \leq 10\degree
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org833448a}]{Tests de persistencia}
-\begin{block}{Variabilidad de irradiancia}
-\begin{itemize}
-\item La media y la desviación estándar se calculan con todas las muestras de un día completo.
-\end{itemize}
+\begin{frame}[label={sec:org28648a8}]{Tests de variabilidad}
+\begin{block}{Test de persistencia}
 \[
 \frac{1}{8} \overline{k_t} \leq \sigma_{k_t} \leq 0.35
 \]
+La media y la desviación estándar se calculan con todas las muestras de un día completo.
 \end{block}
-\end{frame}
 
-\begin{frame}[label={sec:org64f1b2d}]{Tests de rampas}
-\begin{block}{Límites a las variaciones de la irradiancia entre instantes sucesivos}
+\begin{block}{Test de rampas}
 \[
-\left| k_t(t) - k_t(t-1)\right| < 0.75 \text{ si } \gamma_s(t) > 2\degree
+\left| k_t(t) - k_t(t-1)\right| < 0.75 \quad \text{ si } \quad \gamma_s(t) > 2\degree
 \]
+Límites a las variaciones de la irradiancia entre instantes sucesivos.
 \end{block}
 \end{frame}
 
-
-\begin{frame}[label={sec:orgb7883e0}]{Tests de envolvente}
-\begin{itemize}
-\item Sólo para estaciones con medida simultánea de global y directa/difusa.
-\end{itemize}
-
+\begin{frame}[label={sec:orgbc550ab}]{Tests de envolvente}
+Sólo para estaciones con medida simultánea de global y directa/difusa.
 \begin{center}
-\includegraphics[width=.9\linewidth]{../figs/ConsistencyTest.png}
+\includegraphics[height=0.9\textheight]{../figs/ConsistencyTest.png}
 \end{center}
 
 \nocite{Younes.Claywell.ea2005}
 \end{frame}
 
-\begin{frame}[label={sec:org13dbe26}]{Coherencia espacial}
+\begin{frame}[label={sec:orgd72d439}]{Coherencia espacial}
 \begin{itemize}
 \item Las medidas de una estación se pueden comparar con las recogidas por estaciones cercanas.
 \item Esta comprobación debe realizarse con \alert{datos agregados} (diarios) (la variabilidad espacial intradiaria puede ser alta)
@@ -352,7 +342,7 @@ G \geq 0  \text{ si } \gamma_s \leq 10\degree
 \nocite{Journee.Bertrand2011}
 \end{frame}
 
-\begin{frame}[label={sec:orgd1c9fa9}]{Coherencia espacial}
+\begin{frame}[label={sec:org4fbcb96}]{Coherencia espacial}
 \begin{block}{Pasos}
 \begin{itemize}
 \item Estimamos la irradiación en el lugar, \(x_0\), con la interpolación espacial de las estaciones cercanas, \(x_i\).
@@ -377,43 +367,27 @@ G \geq 0  \text{ si } \gamma_s \leq 10\degree
 
 
 
-\begin{frame}[label={sec:org12df237}]{Coherencia estadística}
-\begin{block}{Una medida puede ser etiquetada como \emph{outlier} si es poco probable que pertenezca a la misma distribución que el conjunto.}
-\end{block}
+\begin{frame}[label={sec:orgfa9f551}]{Coherencia estadística}
+Una medida puede ser etiquetada como \emph{outlier} si es poco probable que pertenezca a la misma distribución que el conjunto.
 \begin{block}{\alert{Método de Chauvenet}}
 Una medida es un \emph{outlier} si la probabilidad de obtener su desviación
 respecto de la media es inferior al inverso de 2 veces el número de
 elementos en el conjunto.
-
 \begin{center}
-\includegraphics[width=.9\linewidth]{../figs/chauvenet.png}
+\includegraphics[height=0.5\textheight]{../figs/chauvenet.png}
 \end{center}
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org46c0645}]{Método de Chauvenet}
-\begin{itemize}
+\begin{frame}[label={sec:org4a49d6e}]{Método de Chauvenet}
+\begin{enumerate}
 \item Sean \(G_d(x_i)\) las medidas de radiación diaria del conjunto formado por N estaciones.
-\end{itemize}
-
-\pause
-
-\begin{itemize}
 \item Se calcula la media, \(\overline{G}_d\), la desviación estándar, \(\sigma_{G_d}\).
-\end{itemize}
-
-\pause
-
-\begin{itemize}
 \item Se calcula la distancia estadística de cada estación al conjunto:
-\end{itemize}
 \[
 d_i = \frac{G_d(x_i) - \overline{G}_d}{\sigma_{G_d}}
 \]
 
-\pause
-
-\begin{itemize}
 \item En una distribución gaussiana se calcula la distancia estadística
 equivalente a la probabilidad límite, \(1/2N\), teniendo en cuenta
 las dos colas.
@@ -421,17 +395,16 @@ las dos colas.
 \item Por ejemplo, para un conjunto de 10 estaciones cada cola es
 \(1/40 = 0.025\), el límite es \(\left| d_{max} \right| = 1.96\).
 \end{itemize}
-\end{itemize}
-\pause
 
-\begin{itemize}
 \item Aquellas observaciones que superan la distancia son marcadas como outliers.
-\end{itemize}
+\end{enumerate}
 
 \nocite{Perpinan2009}
 \end{frame}
 
-\begin{frame}[label={sec:org93a770f}]{Método de Chauvenet}
+\begin{frame}[label={sec:org083d9aa}]{Método de Chauvenet}
+\begin{columns}
+\begin{column}{0.3\columnwidth}
 \[
 d_i = \frac{G_d(x_i) - \overline{G}_d}{\sigma_{G_d}}
 \]
@@ -439,21 +412,22 @@ d_i = \frac{G_d(x_i) - \overline{G}_d}{\sigma_{G_d}}
 \[
 \left| d_i \right| > \left| d_{max} \right|
 \]
+\end{column}
 
+\begin{column}{0.8\columnwidth}
 \begin{center}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/chauvenet.png}
 \end{center}
 \end{center}
-
-\begin{block}{Método de Pierce: más robusto y flexible \nocite{Ross2003}}
-\end{block}
+\end{column}
+\end{columns}
 \end{frame}
 
 \section{Control de Calidad de Modelos}
-\label{sec:org31d94ba}
+\label{sec:orgcbf6d1d}
 
-\begin{frame}[label={sec:orgf34cc7a}]{Desviación entre modelo y observación}
+\begin{frame}[label={sec:orgeed4299}]{Desviación entre modelo y observación}
 \begin{itemize}
 \item Sea \(O\) el conjunto de observaciones (medidas) de una variable aleatoria.
 \end{itemize}
@@ -478,41 +452,37 @@ d_i = \frac{G_d(x_i) - \overline{G}_d}{\sigma_{G_d}}
 \]
 \end{frame}
 
-\begin{frame}[label={sec:org8ed2567}]{Estimadores frecuentes: MBD y RMSD}
+\begin{frame}[label={sec:orgd8e8cb5}]{Estimadores frecuentes: MBD y RMSD}
 \begin{itemize}
 \item Mean Bias Difference (MBD), diferencia media (indica si el modelo sobreestima o subestima):
 \end{itemize}
 \[
 MBE = \overline{\mathbf{D}} = \overline{\mathbf{M}} - \overline{\mathbf{O}} = \frac{1}{n} \sum_{i=1}^n (m_i - o_i)
 \]
-\pause
+
 \begin{itemize}
-\item Root Mean Square Error (RMSD), diferencia cuadrático media:
+\item Root Mean Square Difference (RMSD), diferencia cuadrático media:
 \end{itemize}
 \[
 RMSD = \left(\frac{1}{n} \sum_{i=1}^n d_i^2 \right)^{1/2} =  \left( \frac{1}{n} \sum_{i=1}^n (m_i - o_i)^2  \right)^{1/2}
 \]
 \end{frame}
 
-\begin{frame}[label={sec:org12d5274}]{Estimadores frecuentes: MBE y RMSD}
-\begin{itemize}
-\item Varianza de la diferencia (unbiased RMSD):
-\end{itemize}
+\begin{frame}[label={sec:org381a15b}]{Estimadores frecuentes: MBE y RMSD}
+El RMSD agrega información del promedio y la varianza de la
+  diferencia:
+\[
+RMSD^2= \overline{\mathbf{D}}^2 + \sigma^2_{\mathbf{D}} 
+\]
+
+donde la varianza de la diferencia (unbiased RMSD) se calcula:
 \[
 \sigma^2_{\mathbf{D}} = \frac{1}{n} \sum_{i=1}^n (d_i - \overline{\mathbf{D}})^2
 \]
-\pause
-
-\begin{itemize}
-\item El RMSD agrega información del promedio y la varianza de la
-diferencia:
-\end{itemize}
-\[
-RMSD^2= \sigma^2_{\mathbf{D}} + \overline{\mathbf{D}}^2
-\]
 \end{frame}
 
-\begin{frame}[label={sec:org8b35dea}]{Otros estimadores: MAD}
+
+\begin{frame}[label={sec:orgbd0c716}]{Otros estimadores: MAD}
 \begin{itemize}
 \item Mean Absolute Deviation (MAD):
 \end{itemize}
@@ -530,7 +500,7 @@ MAD \leq RMSD \leq n^{1/2} MAD
 \nocite{Willmott.Matsuura.ea2009, Willmott.Matsuura2005a}
 \end{frame}
 
-\begin{frame}[label={sec:org5ada187}]{Otros estimadores: t y d}
+\begin{frame}[label={sec:orgbea8827}]{Otros estimadores: t y d}
 \begin{itemize}
 \item t de Student (valores pequeños indican buen comportamiento del modelo)
 \begin{itemize}
@@ -545,7 +515,6 @@ t = \left ( \frac{(n-1) MBD^2}{RMSD^2 - MBD^2} \right)^{1/2}
 
 \nocite{Stone1993}
 
-\pause 
 
 \begin{itemize}
 \item \(d_1\): Índice de concordancia de Willmott.
@@ -563,17 +532,28 @@ d_1 = 1 - \frac{\sum_{i=1}^n \left| m_i - o_i \right|}{\sum_{i=1}^n \left(
 \nocite{Willmott.Robeson.ea2012}
 \end{frame}
 
-\begin{frame}[label={sec:org4718b92}]{Correlación}
+\begin{frame}[label={sec:org0747d7a}]{Correlación}
 El coeficiente de correlación entre dos conjuntos de datos es una
 medida numérica de la relación \alert{lineal} entre los dos conjuntos (si la
 relación no es lineal, este coeficiente no sirve):
 
+\begin{columns}
+\begin{column}{0.5\columnwidth}
 \[
 r = \frac{1}{n-1} \cdot \sum_{i=1}^{n} \left( \frac{o_{i}-\overline{\mathbf{O}}}{\sigma_{\mathbf{O}}}\right) \cdot \left(\frac{m_{i}-\overline{\mathbf{M}}}{\sigma_{\mathbf{M}}}\right)
 \]
+\end{column}
+
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[height=0.7\textheight]{../figs/Splom.png}
+\end{center}
+\end{column}
+\end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org066f671}]{Diagramas de Taylor}
+
+\begin{frame}[label={sec:org394ccbd}]{Diagramas de Taylor}
 \begin{itemize}
 \item Desarrollando \(\sigma^2_{\mathbf{D}}\) y teniendo en cuenta la definición de \(r\):
 \end{itemize}
@@ -592,35 +572,32 @@ c^2 = a^2 + b^2 - 2 \cdot a \cdot b \cos\phi
 \nocite{Taylor2000}
 \end{frame}
 
-\begin{frame}[label={sec:orga2e42b5}]{Diagramas de Taylor}
+\begin{frame}[label={sec:org0df6d3a}]{Diagramas de Taylor}
 \[
 \sigma^2_{\mathbf{D}} = \sigma^2_{\mathbf{O}}  + \sigma^2_{\mathbf{M}}
 - 2 \cdot \sigma_{\mathbf{O}} \cdot \sigma_{\mathbf{M}} \cdot r 
 \]
 
-\begin{center}
-\begin{center}
-\includegraphics[width=.9\linewidth]{../figs/cosenosDiagramaTaylor.png}
-\end{center}
-\end{center}
-\end{frame}
-
-\begin{frame}[label={sec:org156f7c8}]{Diagramas de Taylor}
+\begin{columns}
+\begin{column}{0.4\columnwidth}
 \begin{itemize}
 \item \(\sigma^2_{\mathbf{D}}\): Distancia al origen
 \item \(\sigma^2_{\mathbf{O}}\): Eje horizontal
 \item \(\sigma^2_{\mathbf{M}}\): Eje vertical
 \item \(r\): acimut
 \end{itemize}
+\end{column}
+
+\begin{column}{0.7\columnwidth}
 \begin{center}
-\begin{center}
-\includegraphics[height=0.6\textheight]{../figs/TaylorDiagrama.png}
+\includegraphics[height=0.8\textheight]{../figs/TaylorDiagrama.png}
 \end{center}
-\end{center}
+\end{column}
+\end{columns}
 \end{frame}
 
 
-\begin{frame}[label={sec:org8ae2df4}]{Target Diagram}
+\begin{frame}[label={sec:orgaeececf}]{Target Diagram}
 \begin{itemize}
 \item Emplea la relación entre \(RMSD\), \(\sigma^2_{\mathbf{D}}\), y \(\overline{\mathbf{D}}\), normalizadas con \(\sigma_{\mathbf{O}}\):
 \end{itemize}
@@ -645,23 +622,27 @@ sign_{\sigma} =  sign(\sigma_{\mathbf{M}} - \sigma_{\mathbf{O}} )
 \]
 
 \begin{itemize}
-\item Incorporan el signo de la diferencia entre desviaciones estándar de modelo y observación:
+\item Incorporan el signo de la diferencia entre desviaciones estándar de modelo y observación.
 \end{itemize}
 
 \nocite{Jolliff.Kindle.ea2009}
 \end{frame}
 
-\begin{frame}[label={sec:orgbe630e4}]{Target Diagram}
+\begin{frame}[label={sec:org3e8b329}]{Target Diagram}
+\begin{columns}
+\begin{column}{0.3\columnwidth}
 \begin{itemize}
 \item \(\sigma'_{\mathbf{D}}\) (con signo): Eje horizontal
 \item \(\overline{\mathbf{D}}'\): Eje vertical
 \item \(RMSD'^2\): Distancia al origen
 \end{itemize}
+\end{column}
 
+\begin{column}{0.7\columnwidth}
 \begin{center}
-\begin{center}
-\includegraphics[height=0.7\textheight]{../figs/TargetDiagram.pdf}
+\includegraphics[height=0.9\textheight]{../figs/TargetDiagram.pdf}
 \end{center}
-\end{center}
+\end{column}
+\end{columns}
 \end{frame}
 \end{document}
