--- a/diapos/RadiacionSolar_ControlCalidad.tex
+++ b/diapos/RadiacionSolar_ControlCalidad.tex
@@ -1,4 +1,4 @@
-% Created 2023-01-08 dom 20:48
+% Created 2023-01-08 dom 20:57
 % Intended LaTeX compiler: pdflatex
 \documentclass[aspectratio=169, usenames,svgnames,dvipsnames]{beamer}
 \usepackage[utf8]{inputenc}
@@ -62,10 +62,10 @@
 \maketitle
 
 \section{Estadística}
-\label{sec:org3967edb}
+\label{sec:orgc82c0e7}
 
 
-\begin{frame}[label={sec:org1a6b348}]{Variable aleatoria y proceso estocástico}
+\begin{frame}[label={sec:org0f0ebca}]{Variable aleatoria y proceso estocástico}
 \begin{itemize}
 \item Una \alert{variable aleatoria} es una función que asigna un único numero
 real a cada resultado de un espacio muestral en un experimento.
@@ -75,7 +75,7 @@ lo largo del \alert{tiempo} (p.ej. la radiación).
 \end{frame}
 
 
-\begin{frame}[label={sec:org253ba10}]{Función de densidad de probabilidad}
+\begin{frame}[label={sec:org5dfe187}]{Función de densidad de probabilidad}
 La función de densidad de probabilidad, \(f(X)\), de una variable
 aleatoria \alert{asigna probabilidad} a un suceso:
 
@@ -104,7 +104,7 @@ P(X>a)=\int_{a}^{\infty}f(x)dx\]
 \end{frame}
 
 
-\begin{frame}[label={sec:org3db997c}]{Media, varianza y desviación estándar}
+\begin{frame}[label={sec:org886c8b6}]{Media, varianza y desviación estándar}
 \begin{itemize}
 \item La \alert{media} de una variable aleatoria es el \alert{centro de masas} de su función densidad de probabilidad:
 \end{itemize}
@@ -128,7 +128,7 @@ P(X>a)=\int_{a}^{\infty}f(x)dx\]
 
 
 
-\begin{frame}[label={sec:orgd58f5c4}]{Combinación lineal de variables aleatorias}
+\begin{frame}[label={sec:org7cad64a}]{Combinación lineal de variables aleatorias}
 \begin{itemize}
 \item La \alert{media de la suma} de varias variables aleatorias \alert{independientes} es
 la suma de las medias:
@@ -149,7 +149,7 @@ la suma de las medias:
 
 
 
-\begin{frame}[label={sec:org666317b}]{Media y varianza de la media muestral}
+\begin{frame}[label={sec:orgaaeee11}]{Media y varianza de la media muestral}
 \begin{itemize}
 \item Una \alert{muestra de una población} es un conjunto de variables
 aleatorias independientes (\(X_{1}...X_{n}\)).
@@ -165,7 +165,7 @@ variable aleatoria (que es una suma de variables aleatorias)
 
 
 
-\begin{frame}[label={sec:orge152351}]{Media y varianza de la media muestral}
+\begin{frame}[label={sec:orgc5b4ae9}]{Media y varianza de la media muestral}
 Sea una población cuya media es \(\mu\) y su varianza es \(\sigma^{2}\):
 
 \begin{itemize}
@@ -191,7 +191,7 @@ Por tanto, una forma de \alert{reducir la incertidumbre} es realizar la
 
 
 
-\begin{frame}[label={sec:org46cba0f}]{Mediana y cuartiles}
+\begin{frame}[label={sec:org246af57}]{Mediana y cuartiles}
 \begin{itemize}
 \item La \alert{mediana} divide el conjunto de valores de la variable en \alert{dos
 mitades} iguales (divide el area encerrada por la función densidad
@@ -206,46 +206,46 @@ una \alert{medida de la dispersión} de la variable.
 
 
 \section{Gráficos}
-\label{sec:org06fb118}
+\label{sec:org8e7ceca}
 
 
-\begin{frame}[label={sec:org2fc00a1}]{Función de Densidad de Probabilidad}
+\begin{frame}[label={sec:org00690b5}]{Función de Densidad de Probabilidad}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/FuncionDensidadProbabilidad.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgcbdefc1}]{Histograma}
+\begin{frame}[label={sec:org13668e9}]{Histograma}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/Histograma.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org904f9c9}]{Gráficos boxplot}
+\begin{frame}[label={sec:orgb94fa80}]{Gráficos boxplot}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/GraficoBoxplot.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org5adc334}]{Gráficos de dispersión}
+\begin{frame}[label={sec:org74a66fe}]{Gráficos de dispersión}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/GraficoDispersion.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:orge144d98}]{Matrices de gráficos de dispersión}
+\begin{frame}[label={sec:org6c795fe}]{Matrices de gráficos de dispersión}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/Splom.png}
 \end{center}
 \end{frame}
 
 \section{Control de Calidad de Medidas}
-\label{sec:orgfca856a}
+\label{sec:orga182531}
 
-\begin{frame}[label={sec:orgccd56ed}]{Introducción}
+\begin{frame}[label={sec:orgc40d075}]{Introducción}
 \begin{block}{Las medidas recogidas por estaciones meteorológicas se deben filtrar para eliminar datos erroneos.}
 \begin{itemize}
 \item Límites Físicos
@@ -260,7 +260,7 @@ una \alert{medida de la dispersión} de la variable.
 
 
 
-\begin{frame}[label={sec:org588b7e6}]{Límites físicos}
+\begin{frame}[label={sec:org464c5af}]{Límites físicos}
 \begin{block}{Irradiación Diaria}
 \begin{itemize}
 \item La radiación global en el plano horizontal debe ser inferior a la extraterrestre (\(K_{td} \leq 1\))
@@ -284,7 +284,7 @@ K_{td} = \frac{G_d(0)}{B_{od}(0)} \geq 0.03
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:orga0fc560}]{Límites físicos}
+\begin{frame}[label={sec:orgf35ff3d}]{Límites físicos}
 \begin{block}{Irradiancia (intradiaria)}
 \begin{itemize}
 \item El índice de claridad debe ser inferior a 1 cuando la altura solar es suficiente:
@@ -307,7 +307,7 @@ G \geq 0  \text{ si } \gamma_s \leq 10\degree
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org28648a8}]{Tests de variabilidad}
+\begin{frame}[label={sec:org3a23e05}]{Tests de variabilidad}
 \begin{block}{Test de persistencia}
 \[
 \frac{1}{8} \overline{k_t} \leq \sigma_{k_t} \leq 0.35
@@ -323,7 +323,7 @@ Límites a las variaciones de la irradiancia entre instantes sucesivos.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:orgbc550ab}]{Tests de envolvente}
+\begin{frame}[label={sec:org94caf61}]{Tests de envolvente}
 Sólo para estaciones con medida simultánea de global y directa/difusa.
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/ConsistencyTest.png}
@@ -332,7 +332,7 @@ Sólo para estaciones con medida simultánea de global y directa/difusa.
 \nocite{Younes.Claywell.ea2005}
 \end{frame}
 
-\begin{frame}[label={sec:orgd72d439}]{Coherencia espacial}
+\begin{frame}[label={sec:org57281f5}]{Coherencia espacial}
 \begin{itemize}
 \item Las medidas de una estación se pueden comparar con las recogidas por estaciones cercanas.
 \item Esta comprobación debe realizarse con \alert{datos agregados} (diarios) (la variabilidad espacial intradiaria puede ser alta)
@@ -342,7 +342,7 @@ Sólo para estaciones con medida simultánea de global y directa/difusa.
 \nocite{Journee.Bertrand2011}
 \end{frame}
 
-\begin{frame}[label={sec:org4fbcb96}]{Coherencia espacial}
+\begin{frame}[label={sec:org15100f4}]{Coherencia espacial}
 \begin{block}{Pasos}
 \begin{itemize}
 \item Estimamos la irradiación en el lugar, \(x_0\), con la interpolación espacial de las estaciones cercanas, \(x_i\).
@@ -367,7 +367,7 @@ Sólo para estaciones con medida simultánea de global y directa/difusa.
 
 
 
-\begin{frame}[label={sec:orgfa9f551}]{Coherencia estadística}
+\begin{frame}[label={sec:orgfdc7890}]{Coherencia estadística}
 Una medida puede ser etiquetada como \emph{outlier} si es poco probable que pertenezca a la misma distribución que el conjunto.
 \begin{block}{\alert{Método de Chauvenet}}
 Una medida es un \emph{outlier} si la probabilidad de obtener su desviación
@@ -379,7 +379,7 @@ elementos en el conjunto.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org4a49d6e}]{Método de Chauvenet}
+\begin{frame}[label={sec:orgad6a92b}]{Método de Chauvenet}
 \begin{enumerate}
 \item Sean \(G_d(x_i)\) las medidas de radiación diaria del conjunto formado por N estaciones.
 \item Se calcula la media, \(\overline{G}_d\), la desviación estándar, \(\sigma_{G_d}\).
@@ -402,7 +402,7 @@ las dos colas.
 \nocite{Perpinan2009}
 \end{frame}
 
-\begin{frame}[label={sec:org083d9aa}]{Método de Chauvenet}
+\begin{frame}[label={sec:org4b8aa0f}]{Método de Chauvenet}
 \begin{columns}
 \begin{column}{0.3\columnwidth}
 \[
@@ -425,9 +425,9 @@ d_i = \frac{G_d(x_i) - \overline{G}_d}{\sigma_{G_d}}
 \end{frame}
 
 \section{Control de Calidad de Modelos}
-\label{sec:orgcbf6d1d}
+\label{sec:org096f9d1}
 
-\begin{frame}[label={sec:orgeed4299}]{Desviación entre modelo y observación}
+\begin{frame}[label={sec:org517b19a}]{Desviación entre modelo y observación}
 \begin{itemize}
 \item Sea \(O\) el conjunto de observaciones (medidas) de una variable aleatoria.
 \end{itemize}
@@ -452,7 +452,15 @@ d_i = \frac{G_d(x_i) - \overline{G}_d}{\sigma_{G_d}}
 \]
 \end{frame}
 
-\begin{frame}[label={sec:orgd8e8cb5}]{Estimadores frecuentes: MBD y RMSD}
+\begin{frame}[label={sec:org0cea34d}]{Exactitud (\emph{bias}) y Precisión (\emph{variance})}
+\begin{center}
+\includegraphics[height=0.8\textheight]{../figs/bias-variance.png}
+\end{center}
+
+\url{http://scott.fortmann-roe.com/docs/BiasVariance.html}
+\end{frame}
+
+\begin{frame}[label={sec:org74fc8c0}]{Estimadores frecuentes: MBD y RMSD}
 \begin{itemize}
 \item Mean Bias Difference (MBD), diferencia media (indica si el modelo sobreestima o subestima):
 \end{itemize}
@@ -468,7 +476,7 @@ RMSD = \left(\frac{1}{n} \sum_{i=1}^n d_i^2 \right)^{1/2} =  \left( \frac{1}{n} 
 \]
 \end{frame}
 
-\begin{frame}[label={sec:org381a15b}]{Estimadores frecuentes: MBE y RMSD}
+\begin{frame}[label={sec:org2686508}]{Estimadores frecuentes: MBE y RMSD}
 El RMSD agrega información del promedio y la varianza de la
   diferencia:
 \[
@@ -482,7 +490,7 @@ donde la varianza de la diferencia (unbiased RMSD) se calcula:
 \end{frame}
 
 
-\begin{frame}[label={sec:orgbd0c716}]{Otros estimadores: MAD}
+\begin{frame}[label={sec:orgc0589b0}]{Otros estimadores: MAD}
 \begin{itemize}
 \item Mean Absolute Deviation (MAD):
 \end{itemize}
@@ -500,7 +508,7 @@ MAD \leq RMSD \leq n^{1/2} MAD
 \nocite{Willmott.Matsuura.ea2009, Willmott.Matsuura2005a}
 \end{frame}
 
-\begin{frame}[label={sec:orgbea8827}]{Otros estimadores: t y d}
+\begin{frame}[label={sec:orgeca3132}]{Otros estimadores: t y d}
 \begin{itemize}
 \item t de Student (valores pequeños indican buen comportamiento del modelo)
 \begin{itemize}
@@ -532,7 +540,7 @@ d_1 = 1 - \frac{\sum_{i=1}^n \left| m_i - o_i \right|}{\sum_{i=1}^n \left(
 \nocite{Willmott.Robeson.ea2012}
 \end{frame}
 
-\begin{frame}[label={sec:org0747d7a}]{Correlación}
+\begin{frame}[label={sec:orga3bed29}]{Correlación}
 El coeficiente de correlación entre dos conjuntos de datos es una
 medida numérica de la relación \alert{lineal} entre los dos conjuntos (si la
 relación no es lineal, este coeficiente no sirve):
@@ -553,7 +561,7 @@ r = \frac{1}{n-1} \cdot \sum_{i=1}^{n} \left( \frac{o_{i}-\overline{\mathbf{O}}}
 \end{frame}
 
 
-\begin{frame}[label={sec:org394ccbd}]{Diagramas de Taylor}
+\begin{frame}[label={sec:orga8fb304}]{Diagramas de Taylor}
 \begin{itemize}
 \item Desarrollando \(\sigma^2_{\mathbf{D}}\) y teniendo en cuenta la definición de \(r\):
 \end{itemize}
@@ -572,7 +580,7 @@ c^2 = a^2 + b^2 - 2 \cdot a \cdot b \cos\phi
 \nocite{Taylor2000}
 \end{frame}
 
-\begin{frame}[label={sec:org0df6d3a}]{Diagramas de Taylor}
+\begin{frame}[label={sec:org7a2a4fc}]{Diagramas de Taylor}
 \[
 \sigma^2_{\mathbf{D}} = \sigma^2_{\mathbf{O}}  + \sigma^2_{\mathbf{M}}
 - 2 \cdot \sigma_{\mathbf{O}} \cdot \sigma_{\mathbf{M}} \cdot r 
@@ -597,7 +605,7 @@ c^2 = a^2 + b^2 - 2 \cdot a \cdot b \cos\phi
 \end{frame}
 
 
-\begin{frame}[label={sec:orgaeececf}]{Target Diagram}
+\begin{frame}[label={sec:org66c332f}]{Target Diagram}
 \begin{itemize}
 \item Emplea la relación entre \(RMSD\), \(\sigma^2_{\mathbf{D}}\), y \(\overline{\mathbf{D}}\), normalizadas con \(\sigma_{\mathbf{O}}\):
 \end{itemize}
@@ -628,7 +636,7 @@ sign_{\sigma} =  sign(\sigma_{\mathbf{M}} - \sigma_{\mathbf{O}} )
 \nocite{Jolliff.Kindle.ea2009}
 \end{frame}
 
-\begin{frame}[label={sec:org3e8b329}]{Target Diagram}
+\begin{frame}[label={sec:org260a57b}]{Target Diagram}
 \begin{columns}
 \begin{column}{0.3\columnwidth}
 \begin{itemize}
